# DataBase

./: CMakeLists.txt  LICENSE  README.md  scppdb.toml
src/: main.cpp
src/include/: README.md  address.hpp  block_manager.hpp  btree.hpp  concurrency_manager.hpp  config.hpp  data_types.hpp  error.hpp  lock_manager.hpp  record.hpp  scppdb.hpp  storage.hpp  table.hpp
src/include/concurrency/: README.md  concurrency_manager.hpp  lock_manager.hpp
src/include/core/: README.md  address.hpp  apuntes.txt  b+.cpp  bplus.hpp  buffer.hpp  data_types.hpp  error.hpp  extra.hpp  input.txt  storage.hpp
src/include/entity/: README.md  comparison.hpp  database.hpp  entity.hpp  field.hpp  record.hpp  table.hpp
test/: block_manager.cpp  config.cpp  data_type.cpp  lock_manager.cpp  table.cpp
test/address/: foo.hpp  read.cpp  write.cpp
test/concurrency/: lock_manager.cpp
test/core/: bplus.cpp  data_type.cpp  hashing.cpp  persona.tabla
test/entity/: field.cpp  record.cpp  table.cpp
